# ai-based-reporting-app

./: .gitignore  README.md  prompt.txt  pyproject.toml  scripts.sql
api/: .env.example  main.py  mcp_client.py
mcp_server/: visualization_server.py
